<resources>
    <string name="app_name">WakeparkBY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Выход</string>
    <string name="nav_price">Цены</string>
    <string name="nav_choosePl">Бронирование</string>
    <string name="nav_mySeasonTickets">Абонемент</string>
    <string name="nav_maps">Карта</string>
    <string name="nav_history">История</string>
    <string name="nav_weather">Погода</string>
    <string name="button_label_enabled">ДРОЗДЫ</string>
</resources>
