<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_choosePl"
        android:icon="@drawable/ic_booking"
        android:title="@string/nav_choosePl" />
    <item
        android:id="@+id/nav_mySeasonTickets"
        android:icon="@drawable/ic_session_ticket"
        android:title="@string/nav_mySeasonTickets" />
    <item
        android:id="@+id/nav_price"
        android:icon="@drawable/ic_price"
        android:title="@string/nav_price" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_weather"
        android:title="@string/nav_weather"/>

</menu>